[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/level_panels/forest_level_panel.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/alagard.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://UI_Scenes/LevelButton.gd" type="Script" id=3]
[ext_resource path="res://assets/menus/Level Select Screen/Unlocked Level.png" type="Texture" id=4]

[sub_resource type="Theme" id=2]

[sub_resource type="DynamicFont" id=1]
size = 38
font_data = ExtResource( 2 )

[node name="LevelButton" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1380.0
margin_bottom = -695.0
rect_min_size = Vector2( 540, 385 )
script = ExtResource( 3 )

[node name="LevelImage" type="TextureButton" parent="."]
unique_name_in_owner = true
margin_right = 546.0
margin_bottom = 392.0
texture_normal = ExtResource( 1 )

[node name="LevelFrame" type="TextureRect" parent="."]
unique_name_in_owner = true
margin_left = -10.0
margin_top = -10.0
margin_right = 536.0
margin_bottom = 382.0
rect_min_size = Vector2( 546, 392 )
mouse_filter = 2
theme = SubResource( 2 )
texture = ExtResource( 4 )

[node name="LevelName" type="Label" parent="."]
unique_name_in_owner = true
margin_left = 179.0
margin_top = 304.0
margin_right = 347.0
margin_bottom = 356.0
grow_horizontal = 2
custom_fonts/font = SubResource( 1 )
text = "Demo 1"
align = 1
valign = 1

[connection signal="pressed" from="LevelImage" to="." method="_on_LevelImage_pressed"]
